Styled the activity field and started on the progress bar with steps

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -44,8 +44,8 @@
     </div>
 
     <div class="progress-clock">
-      <i class="fas fa-hourglass-start"></i> &nbsp&nbsp
-      <p class="time-status"><%= @session.time_left_string %></p>
+      <p><i class="fas fa-hourglass-start"></i> &nbsp&nbsp
+      <p class="time-status"><%= @session.time_left_string %></p></p>
     </div>
   </div>
 
