--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -15,6 +15,7 @@ $ev-green: #32c3b2;
 $ev-orange: #f68e4f;
 $ev-darkgray: #424b58;
 $ev-lightgray: #afb7c1;
+$ev-red: #c63f3f;
 
 $box-shadow: 2px 3px 2px rgba(150, 150, 150, 0.2);
 $accent-box-shadow: 2px 3px 2px rgba(50, 50, 50, 0.8);
