--- a/app/views/pages/queue.html.erb
+++ b/app/views/pages/queue.html.erb
@@ -5,7 +5,7 @@
 <!-- Check if there is a queue. TO BE IMPLEMENTED -->
 <% if true %>
   <!-- If there is a queue... -->
-  <% User.users_in_queue_in_order.each_with_index do | user, idx | %>
+  <% @users_in_queue_in_order.each_with_index do | user, idx | %>
     <div class='ev-card d-flex justify-content-between<% if user.id == current_user.id %><%= " me-card" %><% if @available_posts.count > idx %><%= " me-card-charger-available" %><% end %><% end %>'>
       <div><%= image_tag user.photo, class: "avatar" %></div>
       <div class="d-flex justify-content-between list-for-name">
@@ -17,7 +17,7 @@
           <%= image_tag "charger.png", id: "q-charger" %> <%= @available_posts[idx].id %>
         <% else %>
           <!-- ...ELSE display the estimated amount of time remaining-->
-          <%= User.users_in_queue_in_order %>
+          <%= Time.at((@charging_sessions_start_times[idx] + 240) - Time.now).strftime("%M:%S") %>
           <% if user.id == current_user.id %>
 
           <% else %>
