--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -18,10 +18,10 @@
   border: white 1px solid;
 }
 .avatar-square {
-  width: 40px;
+  width: 46px;
   border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+//  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+//  border: white 1px solid;
 }
 .avatar-decoration {
   width: 35px;
