--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -4,6 +4,61 @@
   "display": "fullscreen",
   "icons": [
     {
+      "src": "<%= image_path 'icons/apple-icon-114x114.png' %>",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-120x120.png' %>",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-144x144.png' %>",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-152x152.png' %>",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-180x180.png' %>",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-57x57.png' %>",
+      "sizes": "57x57",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-60x60.png' %>",
+      "sizes": "60x60",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-72x72.png' %>",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-76x76.png' %>",
+      "sizes": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon-precomposed.png' %>",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/apple-icon.png' %>",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
       "src": "<%= image_path 'icons/android-icon-192x192.png' %>",
       "sizes": "192x192",
       "type": "image/png"
@@ -16,6 +71,36 @@
     {
       "src": "<%= image_path 'icons/favicon-32x32.png' %>",
       "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/favicon-96x96.png' %>",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/favicon.png' %>",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/ms-icon-144x144.png' %>",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/ms-icon-150x150.png' %>",
+      "sizes": "150x150",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/ms-icon-310x310.png' %>",
+      "sizes": "310x310",
+      "type": "image/png"
+    },
+    {
+      "src": "<%= image_path 'icons/ms-icon-70x70.png' %>",
+      "sizes": "70x70",
       "type": "image/png"
     }
   ],
