--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-lewagon fixed-bottom">
 
     <div class="navbar-item">
-      <%= link_to profile_path, id: "navbar-me" do %>
+      <%= link_to authenticated_root_path, id: "navbar-me" do %>
         <% if action_name == "profile" %>
           <%= image_tag "me_orange.png", class: "navbar-img" %>
         <% else %>
@@ -12,16 +12,16 @@
 
     <div class="navbar-item">
       <%= link_to queue_path, id: "navbar-queue" do %>
-      <% if action_name == "queue" %>
-        <%= image_tag "queue_orange.png", class: "navbar-img" %>
-      <% else %>
-        <%= image_tag "queue_grey.png", class: "navbar-img" %>
-      <% end %>
+        <% if action_name == "queue" %>
+          <%= image_tag "queue_orange.png", class: "navbar-img" %>
+        <% else %>
+          <%= image_tag "queue_grey.png", class: "navbar-img" %>
+        <% end %>
       <% end %>
     </div>
 
     <div class="navbar-item">
-      <%= link_to profile_path, id: "navbar-view" do %>
+      <%= link_to authenticated_root_path, id: "navbar-view" do %>
       <%= image_tag "charging_grey.png", class: "navbar-img" %>
       <% end %>
     </div>
