--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -58,9 +58,11 @@ select {
 }
 #points {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content:center;
+  background-color: white;
+  padding: 0.8rem;
+  border-radius: 10px;
   p {
     margin-bottom: 0px;
   }
