AC/DC logo created

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -8,7 +8,7 @@
     <div id='ev-name'><%= @user.first_name %></div>
     <div id='points' class='d-flex justify-content-between'>
       <div id="acdc-div">
-        <%= image_tag 'acdc.png', class: "avatar" %>
+        <%= image_tag 'acdc_colors.png', class: "avatar" %>
       </div>
       <div>
         <% if @user.points >= 0 %>
