--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-lewagon fixed-bottom">
 
-    <div class="navbar-item">
+    <div class="navbar-item pl-3 pr-4">
       <%= link_to profile_path, id: "navbar-me" do %>
         <% if action_name == "profile" %>
           <%= image_tag "me_orange.png", class: "navbar-img" %>
@@ -12,17 +12,21 @@
 
     <div class="navbar-item">
       <%= link_to queue_path, id: "navbar-queue" do %>
-      <% if action_name == "queue" %>
-        <%= image_tag "queue_orange.png", class: "navbar-img" %>
-      <% else %>
-        <%= image_tag "queue_grey.png", class: "navbar-img" %>
-      <% end %>
+        <% if action_name == "queue" %>
+          <%= image_tag "queue_orange.png", class: "navbar-img" %>
+        <% else %>
+          <%= image_tag "queue_grey.png", class: "navbar-img" %>
+        <% end %>
       <% end %>
     </div>
 
     <div class="navbar-item">
-      <%= link_to profile_path, id: "navbar-view" do %>
-      <%= image_tag "charging_grey.png", class: "navbar-img" %>
+      <%= link_to acdc_path, id: "navbar-view" do %>
+        <% if action_name == "acdc" %>
+          <%= image_tag "acdc_orange.png", class: "navbar-img" %>
+        <% else %>
+          <%= image_tag "acdc_grey.png", class: "navbar-img" %>
+        <% end %>
       <% end %>
     </div>
 
