--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -61,7 +61,7 @@ select {
   align-items: center;
   justify-content:center;
   background-color: white;
-  padding: 0.8rem;
+  padding: 0.2rem 0.5rem;
   border-radius: 10px;
   p {
     margin-bottom: 0px;
@@ -69,10 +69,7 @@ select {
 
 }
 #acdc {
-  font-family: $body-font;
-//  font-weight: bold;
-  font-size: 9;
-  padding-bottom: 0px;
+  // padding: 1rem;
 }
 #plus_points {
   width: 52px;
