--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,14 +13,19 @@
 
 body {
   background-color: white;
-  background: linear-gradient($ev-blue, $ev-blue 40%, transparent 60%, transparent 90%,);
+  // background: linear-gradient($ev-blue, $ev-blue 30%, $ev-red 70%, $ev-red 90%);
+  background: linear-gradient($ev-blue, $ev-blue 40%, transparent 60%, transparent 90%);
   // background: linear-gradient($ev-blue, transparent 70%);
-  background-attachment:fixed;
+  background-attachment: fixed;
   min-height: 100vh;
 }
 
-#login-body {
+#acdc-body {
+  background: linear-gradient($ev-blue, $ev-blue 30%, $ev-red 70%, $ev-red 90%);
+  background-attachment: fixed;
+}
 
+#login-body {
   // background: linear-gradient($ev-blue, $ev-blue 40%, transparent 60%, transparent 90%,);
   background: linear-gradient($ev-green, $ev-blue);
   min-height: 100vh;
