--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -104,7 +104,7 @@
       "type": "image/png"
     }
   ],
-  "name": "EV-slide",
-  "short_name": "EV-slide",
+  "name": "EV-Slide",
+  "short_name": "EV-Slide",
   "start_url": "/"
 }
