--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,7 +21,7 @@ body {
 }
 
 #acdc-body {
-  background: linear-gradient($ev-blue, $ev-blue 30%, $ev-red 70%, $ev-red 90%);
+  background: linear-gradient($ev-blue, $ev-green 40%, $ev-orange 70%, $ev-red 90%);
   background-attachment: fixed;
 }
 
