--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -7,7 +7,7 @@
   border-radius: 5px;
   box-shadow: $box-shadow;
   padding: 0 1rem 0 1rem;
-  height: 11%;
+  height: 12%;
 }
 
 #charging-post-dropdown {
@@ -52,7 +52,7 @@ select {
 }
 .btn-warning {
   background-color: $ev-orange;
-  // width: 50px;
+  //width: 50px;
   border-radius: 10px;
   height: 35px;
 }
@@ -120,11 +120,14 @@ select {
   align-items: center;
   justify-content: space-between;
   width: 70%;
+//  border: solid green;
 }
-
-#ev-name {
+#ev-start-charging-button {
+  display: flex;
+  justify-content: space-between;
 //  border: solid black;
+  width: 120px;
 }
-.ev-empty {
-  // border: solid black;
+.ev-spacing {
+  padding-left: 10px;
 }
