--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -8,10 +8,12 @@
   position: relative;
 }
 #app_name{
+  color: #424b58;
   font-family: $body-font;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: strong;
-  padding-right: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 .push {
   margin-left: auto;
@@ -24,6 +26,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #12b1c9;
+//  background-color: #14a1b7;
+  border-radius: 5px;
+  padding: 7px;
+  width: 70%;
+  margin-top: 5px;
 }
 
 .log-out-btn{
@@ -31,4 +39,33 @@
   width: 30px;
   border: 0;
   margin-top: 0.3rem;
+}
+.logo-cars {
+  width: 25%;
+
+}
+#ev-logo-frame {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: dotted $ev-darkgray 2px;
+  border-radius: 6px;
+  width: 73%;
+  padding: 5px;
+}
+#ev-logo-frame2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: dotted $ev-darkgray 2px;
+  border-radius: 6px;
+  width: 100%;
+  padding: 5px;
+}
+.ev-3-cars-logo {
+  width: 32%;
+
+}
+.btn-flash {
+  width: 150%;
 }
