--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,56 @@
+
 <div id="header">
+  <div class="center">
+  <div id="app_name">EV SLIDE</div>
+    <%= image_tag "wheels.png", class: "ev-3-cars-logo"%>
+  </div>
+  <div class="push">
+    <%= link_to image_tag("logout_grey.png", class: "log-out-btn"), destroy_user_session_path, method: :delete %>
+  </div>
+</div>
+
+<!-- <div id="header">
+  <div class="center">
+  <div id="app_name">EV SLIDE</div>
+    <%= image_tag "3_cars.png", class: "ev-3-cars-logo"%>
+  </div>
+  <div class="push">
+    <%= link_to image_tag("logout_grey.png", class: "log-out-btn"), destroy_user_session_path, method: :delete %>
+  </div>
+</div>
+
+<div id="header">
+  <div class="center">
+  <div id="app_name">EV SLIDE</div>
+    <%= image_tag "car_flash.png", class: "ev-3-cars-logo"%>
+  </div>
+  <div class="push">
+    <%= link_to image_tag("logout_grey.png", class: "log-out-btn"), destroy_user_session_path, method: :delete %>
+  </div>
+</div> -->
+
+<!-- <div id="header">
+  <div class="center">
+    <div id='ev-logo-frame2'>
+      <%= image_tag "car_driving_right.png", class: "logo-cars" %>
+      <div id="app_name">EV SLIDE</div>
+      <%= image_tag "car_driving_left.png", class: "logo-cars" %>
+    </div>
+  </div>
+  <div class="push">
+    <%= link_to image_tag("logout_grey.png", class: "log-out-btn"), destroy_user_session_path, method: :delete %>
+  </div>
+</div> -->
+
+
+
+<!-- <div id="header">
   <div class="center">
     <div id="app_name">EV SLIDE</div>
     <%= image_tag "car.png", height: '75' %>
   </div>
   <div class="push">
-    <%= link_to image_tag("logout.png", class: "log-out-btn"), destroy_user_session_path, method: :delete %>
+    <%= link_to image_tag("logout_grey.png", class: "log-out-btn"), destroy_user_session_path, method: :delete %>
   </div>
 </div>
+ -->
