--- a/app/views/pages/queue.html.erb
+++ b/app/views/pages/queue.html.erb
@@ -6,7 +6,13 @@
 <% if true %>
   <!-- If there is a queue... -->
   <% @users_in_queue_in_order.each_with_index do | user, idx | %>
-    <div class='ev-card d-flex justify-content-between<% if user.id == current_user.id %><%= " me-card" %><% if @available_posts.count > idx %><%= " me-card-charger-available" %><% end %><% end %>'>
+    <div class='ev-card d-flex ev-card-<%= user.id %> justify-content-between
+        <% if user.id == current_user.id %>
+          <%= " me-card" %>
+          <% if @available_posts.count > idx %>
+            <%= " me-card-charger-available" %>
+          <% end %>
+        <% end %>'>
       <div><%= image_tag user.photo, class: "avatar" %></div>
       <div class="d-flex justify-content-between list-for-name">
         <div><%= user.first_name %> <%= user.last_name %></div>
@@ -18,11 +24,6 @@
         <% else %>
           <!-- ...ELSE display the estimated amount of time remaining-->
           <%= Time.at((@charging_sessions_start_times[idx] + 240) - Time.now).strftime("%M:%S") %>
-          <% if user.id == current_user.id %>
-
-          <% else %>
-
-          <% end %>
         <% end %>
         </div>
       </div>
@@ -30,3 +31,4 @@
   <% end %>
 <% end %>
 
+  <%= javascript_pack_tag 'reload' %>
