navbar and body adjustments - size

--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -10,9 +10,9 @@
   height: 12%;
 }
 
-#high-score-card {
-  height: 11%;
-}
+/* #high-score-card {
+  height: 11.5%;
+} */
 
 #charging-post-dropdown {
   margin-top: 1rem;
