--- a/app/views/pages/acdc.html.erb
+++ b/app/views/pages/acdc.html.erb
@@ -12,7 +12,7 @@
   </div>
 <% end %>
 
-<div><hr class="acdc-ruler"></div>
+<!-- <div><hr class="acdc-ruler"></div> -->
 
 <% @bottom_users_in_acdc_order.each_with_index do | user, idx | %>
   <div class='ev-card d-flex justify-content-between' id="high-score-card">
