--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -141,3 +141,10 @@ select {
 .ev-spacing {
   padding-left: 10px;
 }
+
+.fire-wrapper {
+  position: relative;
+  width: 40%;
+  height: 55px;
+  overflow: hidden;
+}
