--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,8 @@
 .alert {
   position: fixed;
-  bottom: 16px;
-  right: 16px;
+  bottom: 257px;
+  right: 39px;
   z-index: 1000;
+  background-color: $ev-orange;
+  color: white;
 }
