--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #12b1c9;
+//  background-color: #12b1c9;
 //  background-color: #14a1b7;
   border-radius: 5px;
   padding: 7px;
