added card for empty queue

--- a/app/assets/stylesheets/components/_queue.scss
+++ b/app/assets/stylesheets/components/_queue.scss
@@ -34,3 +34,22 @@
   font-weight: bold;
   margin-bottom: 0px;
 }
+.no-queue {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10%;
+}
+.i-yeah {
+  height: 60px;
+  padding-bottom: 15px;
+  padding-left: 10px;
+
+}
+.p-yeah {
+  padding-left: 20px;
+}
+
+#slide-yeah {
+  top: 10px;
+}
