--- a/app/views/pages/queue.html.erb
+++ b/app/views/pages/queue.html.erb
@@ -1,24 +1,38 @@
+<% flash.each do | name, msg | %>
+<%= content_tag :div, msg, :id => "flash" if msg.length > 0 %>
+<% end %>
+
+<!-- Show if there is NOT a queue... -->
+<% if !@no_queue %>
+  <div class='ev-card d-flex'>
+    <div class="no-queue">
+      <div ><%= image_tag "yeah.png", class: 'i-yeah' %></div>
+      <div><p class='p-yeah'>The queue is empty.</p></div>
+    </div>
+  </div>
+<% end %>
+
 <!-- If there is a queue... -->
 <% @users_in_queue_in_order.each_with_index do | user, idx | %>
-  <div class='ev-card d-flex justify-content-between ev-card-<%= user.id %>
-      <% if user.id == current_user.id %>
-        <%= " me-card" %>
-        <% if @available_posts.count > idx %>
-          <%= " me-card-charger-available" %>
-        <% end %>
-      <% end %>'>
+  <div class='ev-card d-flex justify-content-between'><%= user.id %>
+    <% if user.id == current_user.id %>
+      <%= " me-card" %>
+      <% if @available_posts.count > idx %>
+        <%= " me-card-charger-available" %>
+      <% end %>
+    <% end %>'>
     <div><%= image_tag user.photo, class: "avatar" %></div>
     <div class="d-flex justify-content-between list-for-name">
       <div><%= user.first_name %> <%= user.last_name %></div>
       <div class="ev-info-<%= user.id %>">
       <!-- IF there ARE available charging posts... -->
-      <% if @available_posts.count > idx %>
+        <% if @available_posts.count > idx %>
         <!-- ...display the available charging post number... -->
-        <%= image_tag "charger.png", id: "q-charger" %> <%= @available_posts[idx].id %>
-      <% else %>
+          <%= image_tag "charger.png", id: "q-charger" %> <%= @available_posts[idx].id %>
+        <% else %>
         <!-- ...ELSE display the estimated amount of time remaining-->
-        <%= Time.at((@charging_sessions_start_times[idx] + 240) - Time.now).strftime("%M:%S") %>
-      <% end %>
+          <%= Time.at((@charging_sessions_start_times[idx] + 240) - Time.now).strftime("%M:%S") %>
+        <% end %>
       </div>
     </div>
   </div>
