--- a/app/assets/stylesheets/components/_cloud.scss
+++ b/app/assets/stylesheets/components/_cloud.scss
@@ -3,41 +3,33 @@
   margin-right: -10px;
   margin-top: 8px;
   z-index: 1;
-  // margin : 20px auto;
   // animation : shake .5s ease-in infinite;
-  animation : slide-left 3s ease-in infinite;
+  animation : slide-left 6s ease-in;
 }
 
 .slide-left {
   animation: slide-left 3s ease-in both;
 }
 
-.slide-right {
-  animation: slide-right 0.3s ease-in both;
-}
-
-@keyframes slide-right {
-  0% {
-    transform: translateX(-120px);
-  }
-  100% {
-    transform: translateX(100px);
-  }
-}
-
 @keyframes slide-left {
   0% {
-    transform: translateX(90px);
+    transform: translateX(0px);
   }
-
+  20% {
+    transform: translateX(-12px);
+  }
+  40% {
+    transform: translateX(9px);
+  }
+  60% {
+    transform: translateX(-3px);
+  }
+  80% {
+    transform: translateX(8px);
+  }
   100% {
-    transform: translateX(-120px);
+    transform: translateX(0px);
   }
-}
-
-@keyframes shake {
-  50%  {transform  : rotate( 2deg);}
-  100% {transform  : rotate(-2deg);}
 }
 
 .cloud-img {
