--- a/app/assets/stylesheets/components/_cloud.scss
+++ b/app/assets/stylesheets/components/_cloud.scss
@@ -4,7 +4,7 @@
   margin-top: 8px;
   z-index: 1;
   // animation : shake .5s ease-in infinite;
-  animation : slide-left 6s ease-in;
+  animation : slide-left 8s ease-in both;
 }
 
 .slide-left {
@@ -13,22 +13,22 @@
 
 @keyframes slide-left {
   0% {
-    transform: translateX(0px);
+    transform: translate(0px, 0px);
   }
   20% {
-    transform: translateX(-12px);
+    transform: translate(-9px, 1px);
   }
   40% {
-    transform: translateX(9px);
+    transform: translate(7px, 5px);
   }
   60% {
-    transform: translateX(-3px);
+    transform: translate(-3px, -1px);
   }
   80% {
-    transform: translateX(8px);
+    transform: translate(8px, 3px);
   }
   100% {
-    transform: translateX(0px);
+    transform: translate(0px, 0px);
   }
 }
 
