--- a/app/assets/stylesheets/components/_ev-card.scss
+++ b/app/assets/stylesheets/components/_ev-card.scss
@@ -73,7 +73,8 @@ select {
 
 .negative-score {
   color: $ev-red;
-  font-size: 2.5rem;
+  font-size: 2rem;
+  text-shadow: 1px 1px black;
 }
 
 #points {
