--- a/app/views/pages/queue.html.erb
+++ b/app/views/pages/queue.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <!-- Show if there is NOT a queue... -->
-<% if !@no_queue %>
+<% if @no_queue %>
   <div class='ev-card d-flex'>
     <div class="no-queue">
       <div ><%= image_tag "yeah.png", class: 'i-yeah' %></div>
@@ -14,7 +14,7 @@
 
 <!-- If there is a queue... -->
 <% @users_in_queue_in_order.each_with_index do | user, idx | %>
-  <div class='ev-card d-flex justify-content-between'><%= user.id %>
+  <div class='ev-card d-flex justify-content-between <%= user.id %>
     <% if user.id == current_user.id %>
       <%= " me-card" %>
       <% if @available_posts.count > idx %>
