--- a/app/views/pages/acdc.html.erb
+++ b/app/views/pages/acdc.html.erb
@@ -20,3 +20,13 @@
   </div>
 <% end %>
 
+<div class="fire-wrapper-bottom">
+  <div class="fire">
+    <span class="flame"></span>
+    <span class="flame"></span>
+    <span class="flame"></span>
+    <span class="flame"></span>
+    <span class="flame"></span>
+  </div>
+</div>
+
